--- a/src/tela/TelaBuscaOS.form
+++ b/src/tela/TelaBuscaOS.form
@@ -179,7 +179,7 @@
                                               </Group>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Component id="jLabelNome_NomeFantasia" min="-2" pref="39" max="-2" attributes="0"/>
-                                                  <EmptySpace max="32767" attributes="0"/>
+                                                  <EmptySpace pref="25" max="32767" attributes="0"/>
                                                   <Component id="tField_nome_razaoSocial" min="-2" pref="470" max="-2" attributes="0"/>
                                                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                                               </Group>
@@ -317,7 +317,7 @@
                                               <Component id="jFormattedTextFieldPorcentagemDesconto" min="-2" pref="110" max="-2" attributes="0"/>
                                               <Component id="jFormattedTextFieldValorDesconto" min="-2" pref="110" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                                          <EmptySpace min="16" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
                                           <Group type="103" groupAlignment="0" attributes="0">
@@ -346,7 +346,7 @@
                                               <Component id="jFormattedTextFieldTotalSemDesconto" min="-2" pref="110" max="-2" attributes="0"/>
                                               <Component id="jFormattedTextFieldTotalComDesconto" min="-2" pref="110" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                                          <EmptySpace min="2" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -358,13 +358,20 @@
                                   <Component id="jRadioButtonAprovado" min="-2" pref="77" max="-2" attributes="0"/>
                                   <EmptySpace min="13" pref="13" max="-2" attributes="0"/>
                                   <Component id="jRadioButtonConcluido" min="-2" pref="81" max="-2" attributes="0"/>
-                                  <EmptySpace min="-2" pref="109" max="-2" attributes="0"/>
-                                  <Component id="jButtonConfirmar" min="-2" pref="109" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
-                                  <Component id="jButton1" min="-2" pref="140" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" attributes="0">
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <EmptySpace min="162" pref="162" max="-2" attributes="0"/>
+                                          <Component id="jButton1" min="-2" pref="148" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="jButtonConfirmar" min="-2" pref="116" max="-2" attributes="0"/>
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      </Group>
+                                  </Group>
+                                  <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -677,20 +684,28 @@
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabelSituacao" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextFieldCodigoOS" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRadioButtonCancelado" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRadioButtonEmAberto" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRadioButtonAprovado" min="-2" max="-2" attributes="0"/>
-                      <Component id="jRadioButtonConcluido" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                          <Component id="jButtonConfirmar" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="jLabelSituacao" min="-2" max="-2" attributes="0"/>
+                              <Component id="jTextFieldCodigoOS" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRadioButtonCancelado" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRadioButtonEmAberto" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRadioButtonAprovado" min="-2" max="-2" attributes="0"/>
+                              <Component id="jRadioButtonConcluido" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="0" pref="46" max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" alignment="1" attributes="0">
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="jButtonConfirmar" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jButton1" min="-2" pref="47" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="0" pref="35" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
