--- a/src/tela/TelaLogin.form
+++ b/src/tela/TelaLogin.form
@@ -100,7 +100,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/images/user.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="usu&#xe1;rio"/>
+            <Property name="text" type="java.lang.String" value="Usu&#xe1;rio"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
@@ -108,7 +108,7 @@
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/images/icons8-cadeado-2-15.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="senha"/>
+            <Property name="text" type="java.lang.String" value="Senha"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextFieldTxtUsuario">
