--- a/src/tela/TelaPrincipal.form
+++ b/src/tela/TelaPrincipal.form
@@ -94,7 +94,7 @@
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/images/icons8-automotivo-15.png"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Cadastro de Ve&#xed;culo"/>
+                <Property name="text" type="java.lang.String" value="Lista de Ve&#xed;culo"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemCadastroDeVeiculoActionPerformed"/>
